# Ovito

./: .gitignore  CMakeLists.txt  README.txt
src/: CMakeLists.txt
src/base/: Base.h  CMakeLists.txt
src/base/io/: LoadStream.cpp  LoadStream.h  SaveStream.cpp  SaveStream.h
src/base/linalg/: AffineDecomposition.cpp  AffineDecomposition.h  AffineTransformation.h  Box2.h  Box3.h  LinAlg.h  Matrix3.h  Matrix4.cpp  Matrix4.h  Plane.h  Point2.h  Point3.h  Quaternion.h  Ray.h  Rotation.h  Scaling.h  Tensor.h  Vector2.h  Vector3.h  Vector4.h
src/base/utilities/: BoundedPriorityQueue.h  Color.h  Debugging.h  Exception.cpp  Exception.h  FloatType.h  MemoryPool.h
src/core/: CMakeLists.txt  Core.cpp  Core.h  ForwardDecl.h  mainpage.dox
src/core/animation/: AnimManager.cpp  AnimManager.h  AnimationSettings.cpp  AnimationSettings.h  AnimationTimeSpinner.h  TimeInterval.h
src/core/dataset/: CurrentSelectionProxy.cpp  CurrentSelectionProxy.h  DataSet.cpp  DataSet.h  DataSetContainer.cpp  DataSetContainer.h  DataSetManager.cpp  DataSetManager.h  UndoStack.cpp  UndoStack.h
src/core/io/: ObjectLoadStream.cpp  ObjectLoadStream.h  ObjectSaveStream.cpp
src/core/object/: NativeOvitoObjectType.cpp  NativeOvitoObjectType.h  OvitoObject.cpp  OvitoObject.h  OvitoObjectReference.h  OvitoObjectType.cpp  OvitoObjectType.h
src/core/plugins/: NativePlugin.cpp  NativePlugin.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h
src/core/reference/: CloneHelper.cpp  CloneHelper.h  NativePropertyFieldDescriptor.h  PropertyField.cpp  PropertyField.h  PropertyFieldDescriptor.cpp  PropertyFieldDescriptor.h  RefMaker.cpp  RefMaker.h  RefTarget.cpp  RefTarget.h  RefTargetListener.cpp  RefTargetListener.h  ReferenceEvent.h
src/core/rendering/: ArrowGeometryBuffer.h  ArrowPrimitive.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferWidget.cpp  FrameBufferWidget.h  FrameBufferWindow.cpp  FrameBufferWindow.h  ImageGeometryBuffer.h  ImagePrimitive.h  LineGeometryBuffer.h  LinePrimitive.h  MeshPrimitive.h  ParticleGeometryBuffer.h  ParticlePrimitive.h  PrimitiveBase.h  RenderSettings.cpp  RenderSettings.h  RenderSettingsEditor.cpp  RenderSettingsEditor.h  SceneRenderer.cpp  SceneRenderer.h  TextGeometryBuffer.h  TextPrimitive.h  TriMeshGeometryBuffer.h
src/core/resources/: Core.json  Core.manifest.xml  core.qrc
src/core/scene/: GroupNode.cpp  GroupNode.h  ObjectNode.cpp  ObjectNode.h  SceneNode.cpp  SceneNode.h  SceneRoot.cpp  SceneRoot.h  SelectionSet.cpp  SelectionSet.h
src/core/utilities/: BackgroundOperation.h  BoundedPriorityQueue.h  Color.h  Exception.cpp  Exception.h  FloatType.h  MemoryPool.h  ObjectStatus.h
src/core/viewport/: Viewport.cpp  Viewport.h  ViewportConfiguration.cpp  ViewportConfiguration.h  ViewportManager.cpp  ViewportManager.h  ViewportMenu.cpp  ViewportMenu.h  ViewportSettings.cpp  ViewportSettings.h  ViewportWindow.cpp  ViewportWindow.h  Window3D.cpp  Window3D.h
src/main/: CMakeLists.txt  Main.cpp
src/main/resources/: Info.plist  ovito.icns
src/mesh/: CMakeLists.txt
src/mesh/import/: TriMeshImportData.cpp  TriMeshImportData.h  VTKFileImporter.cpp
src/mesh/resources/: Mesh.manifest.xml
src/opengltest/: CMakeLists.txt  Main.cpp  OpenGLBuffer.h  ParticleWindow.h  TestWindow.cpp  TestWindow.h  ViewportWindow.cpp  ViewportWindow.h  Window1.h  Window10.h  Window2.h  Window3.h  Window4.h  Window6.h  Window7.h  Window8.h  Window9.h  gltest.qrc
src/opengltest/glsl/: cube_flat.gs  cube_flat2.vs  sphere_init_uniform.gs
src/particles/: CMakeLists.txt
src/particles/data/: BondsObject.h  BondsStorage.cpp  ParticleDisplay.cpp  ParticleDisplay.h  ParticleProperty.h  ParticlePropertyObject.cpp  ParticlePropertyObject.h  ParticleSelectionSet.cpp  ParticleSelectionSet.h  ParticleTypeProperty.cpp  SimulationCell.cpp  SimulationCell.h  SimulationCellData.h  SimulationCellDisplay.h  VectorDisplay.cpp  VectorDisplay.h
src/particles/exporter/: OutputColumnMapping.h  ParticleExporter.cpp  ParticleExporter.h  ParticleExporterSettingsDialog.h
src/particles/importer/: InputColumnMapping.h  InputColumnMappingDialog.h  ParticleImportData.cpp  ParticleImportData.h  ParticleImporter.cpp  ParticleImporter.h
src/particles/modifier/: AsynchronousParticleModifier.h  ParticleModifier.cpp  ParticleModifier.h
src/particles/util/: OnTheFlyNeighborListBuilder.h  ParticleInformationApplet.cpp  ParticleInformationApplet.h  ParticlePickingHelper.cpp  ParticlePropertyComboBox.cpp  ParticlePropertyComboBox.h  TreeNeighborListBuilder.cpp  TreeNeighborListBuilder.h
src/plugins/: CMakeLists.txt
src/plugins/crystalanalysis/: CMakeLists.txt  CrystalAnalysis.h
src/plugins/mesh/: CMakeLists.txt  Mesh.h
src/plugins/netcdf/: CMakeLists.txt  FindNetCDF.cmake  NetCDFImporter.cpp  NetCDFImporter.h  PythonInterface.cpp
src/plugins/particles/: CMakeLists.txt  Particles.cpp  Particles.h
src/plugins/pyscript/: CMakeLists.txt  PyScript.cpp  PyScript.h
src/plugins/scripting/: CMakeLists.txt  Scripting.h  TODO
src/plugins/tachyon/: CMakeLists.txt
src/qcustomplot/: CMakeLists.txt
src/resources/executable/: ovito.icns  ovito.rc
src/ssh/: CMakeLists.txt  FindBotan.cmake  sftpchannel.h  sshconnection.cpp  sshconnectionmanager.cpp  sshcryptofacility.cpp  sshcryptofacility_p.h  sshremoteprocess.cpp  sshremoteprocessrunner.cpp  sshremoteprocessrunner.h
src/tachyon/: CMakeLists.txt
src/tachyon/renderer/: TachyonRenderer.cpp  TachyonRenderer.h  TachyonRendererEditor.cpp
src/tachyon/tachyonlib/: api.c  camera.h  coordsys.c  cylinder.c  intersect.c  light.c  parallel.c  ppm.c  quadric.h  render.c  shade.h  sphere.c  tachyon.h  texture.h  threads.c  threads.h  trace.c  util.h  vol.c
src/video/: CMakeLists.txt  QVideoEncoder.cpp  VideoEncoder.cpp  VideoEncoder.h  ffmpeg.h
src/viz/: CMakeLists.txt
src/viz/data/: BondsDisplay.cpp  BondsDisplay.h  BondsObject.cpp  BondsObject.h  BondsStorage.cpp  BondsStorage.h  ParticleDisplay.cpp  ParticleDisplay.h  ParticleProperty.cpp  ParticleProperty.h  ParticlePropertyObject.cpp  ParticlePropertyObject.h  ParticleSelectionSet.cpp  ParticleSelectionSet.h  (+11 more)
(+1452 files in other folders)
